flare/flare_internals/src/passes/parser.rs
use crate::{
    passes::midend::typing::{ClosedRow, Row, Type, TypeVar},
    resource::{
        errors::{CompResult, CompilerErr, DynamicErr, ErrorCollection},
        rep::{
            ast::{
                ComparisonOp, Definition, Expr, Label, LambdaInfo, Package, Pattern, PatternAtom, Untyped // Untyped,
            },
            // concretetypes::{EnumVariant, PrimitiveType, Ty},
            files::FileID,
            Spanned,
        },
    },
    FileCtx,
};
use chumsky::{input::{BorrowInput, MapExtra, SliceInput, StrInput, ValueInput}};
use chumsky::pratt::{infix, left, right, Operator};
use chumsky::prelude::*;
use internment::Intern;
// use lasso::{Interner, Rodeo};
use ordered_float::OrderedFloat;

/// Type representing the tokens produced by the lexer. Is private, since tokens are only used in the first stage of parsing.
#[derive(Debug, Clone, PartialEq, Copy)]
#[allow(dead_code)]
enum Token {
    Ident(&'static str),
    // Ident(),
    // Ident(Spur),
    Num(f64),

    Strlit(&'static str),
    // Strlit(Intern<String>),
    Comment(&'static str),
    // Comment(Intern<String>),
    Parens(&'static [Spanned<Self>]),

    ///Contains the erroneous token's src
    Error(char),

    Separator,
    Whitespace,

    Colon,
    DoubleColon,
    Sandwich(&'static str),
    Eq,
    Dot,
    FatArrow,
    Arrow,
    Comma,
    Pipe,

    Asterisk,
    Slash,
    Plus,
    Minus,

    ComparisonOp(ComparisonOp),
    Ampersand,
    At,
    
    LBrace,
    RBrace,
    LBracket,
    RBracket,
    LParen,
    RParen,
    Question,

    Def,
    Else,
    Enum,
    Extern,
    False,
    Fn,
    If,
    Impl,
    In,
    Let,
    Match,
    Package,
    Pub,
    Struct,
    Then,
    True,
    Use,

    TyNum,
    TyStr,
    TyBool,
    TyUnit,
    Myself,
    Metatype,
}

impl std::fmt::Display for Token {
    fn fmt(&self, f: &mut std::fmt::Formatter) -> std::fmt::Result {
        match self {
            Self::Ident(x) => write!(f, "{x:?}"),
            Self::Num(x) => write!(f, "{x}"),
            Self::Eq => write!(f, "="),
            Self::Let => write!(f, "let"),
            Self::In => write!(f, "in"),
            Self::Parens(_) => write!(f, "(...)"),
            Self::Asterisk => write!(f, "*"),
            Self::Slash => write!(f, "/"),
            Self::Plus => write!(f, "+"),
            Self::Minus => write!(f, "-"),
            Self::ComparisonOp(c) => match c {
                ComparisonOp::Eq => write!(f, "=="),
                ComparisonOp::Neq => write!(f, "!="),
                ComparisonOp::Gt => write!(f, ">"),
                ComparisonOp::Lt => write!(f, "<"),
                ComparisonOp::Gte => write!(f, ">="),
                ComparisonOp::Lte => write!(f, "<="),
            },
            Self::Ampersand => write!(f, "&"),
            Self::At => write!(f, "@"),
            Self::Fn => write!(f, "fn"),
            Self::True => write!(f, "true"),
            Self::False => write!(f, "false"),
            Self::Strlit(s) => write!(f, "\"{s}\""),
            Self::Comment(c) => write!(f, "{c}"),
            Self::Colon => write!(f, ":"),
            Self::DoubleColon => write!(f, "::"),
            Self::Sandwich(s) => write!(f, ":{s}:"),
            Self::Separator => write!(f, "newline"),
            Self::Whitespace => write!(f, "whitespace"),
            Self::Dot => write!(f, "."),
            Self::FatArrow => write!(f, "=>"),
            Self::Arrow => write!(f, "->"),
            Self::Question => write!(f, "?"),

            Self::Comma => write!(f, ","),
            Self::Pipe => write!(f, "|"),
            Self::LBrace => write!(f, "{{"),
            Self::RBrace => write!(f, "}}"),
            Self::LBracket => write!(f, "["),
            Self::RBracket => write!(f, "]"),
            Self::LParen => write!(f, "("),
            Self::RParen => write!(f, ")"),
            Self::Package => write!(f, "package"),
            Self::Use => write!(f, "use"),
            Self::Struct => write!(f, "struct"),
            Self::Else => write!(f, "else"),
            Self::Enum => write!(f, "enum"),
            Self::Extern => write!(f, "extern"),
            Self::Impl => write!(f, "impl"),
            Self::If => write!(f, "if"),
            Self::Match => write!(f, "match"),
            Self::Pub => write!(f, "pub"),
            Self::Then => {
                write!(f, "then")
            }
            Self::Def => write!(f, "def"),

            Self::TyNum => write!(f, "num"),
            Self::TyStr => write!(f, "str"),
            Self::TyBool => write!(f, "bool"),
            Self::TyUnit => write!(f, "unit"),
            Self::Myself => write!(f, "self"),
            Self::Metatype => write!(f, "Self"),

            Self::Error(e) => write!(f, "Error {e}"),
        }
    }
}

/// The primary lexer function.
fn lexer<I>(
    id: FileID,
    // rodeo: &mut Rodeo,
) -> impl Parser<
    'static,
    I,
    Vec<Spanned<Token>>,
    extra::Err<Rich<'static, char, SimpleSpan<usize, ()>>>, /*extra::Err<Rich<'static, char>>*/
>
//where I:  BorrowInput<'static, Token = char, Span = SimpleSpan<usize, ()>> + ValueInput<'static, Token = char, Span = SimpleSpan<usize, ()>> + StrInput<'static> + SliceInput<'static>,
where
    I: ValueInput<'static, Token = char, Span = SimpleSpan<usize, ()>>
        + SliceInput<'static, Slice = &'static str, Span = SimpleSpan<usize, ()>>
        + StrInput<'static, Span = SimpleSpan<usize, ()>>,
    //where I: str
{
    let comment = just("#")
        .then_ignore(any().and_is(just('\n').not()).repeated())
        .labelled("comment")
        .padded();
    let recover_strat1 = any().padded_by(comment.repeated()).padded().map_with(
        move |x, e: &mut chumsky::input::MapExtra<'_, '_, I, extra::Err<_>>| {
            Spanned(
                Token::Error(x),
                // SimpleSpan::new(**e.state(), e.span().into_range()),
                SimpleSpan::new(id, e.span().into_range()),
            )
        },
    );

    let comparison_op = choice((
        just("<").to(Token::ComparisonOp(ComparisonOp::Lt)),
        just("<=").to(Token::ComparisonOp(ComparisonOp::Lte)),
        just(">").to(Token::ComparisonOp(ComparisonOp::Gt)),
        just(">=").to(Token::ComparisonOp(ComparisonOp::Gte)),
        just("==").to(Token::ComparisonOp(ComparisonOp::Eq)),
        just("!=").to(Token::ComparisonOp(ComparisonOp::Neq)),
    ))
    .labelled("comparison operator");

    let arith_op = choice((
        just("*").to(Token::Asterisk),
        just("/").to(Token::Slash),
        just("+").to(Token::Plus),
        just("-").to(Token::Minus),
    ))
    .labelled("arithmetic operator");

    recursive(move |token| {
        choice((
            text::ident().map(|s| match s {
                "def" => Token::Def,
                "else" => Token::Else,
                "enum" => Token::Enum,
                "extern" => Token::Extern,
                "false" => Token::False,
                "fn" => Token::Fn,
                "impl" => Token::Impl,
                "if" => Token::If,
                "in" => Token::In,
                "let" => Token::Let,
                "match" => Token::Match,
                "package" => Token::Package,
                "pub" => Token::Pub,
                "struct" => Token::Struct,
                "then" => Token::Then,
                "true" => Token::True,
                "use" => Token::Use,
                "num" => Token::TyNum,
                "self" => Token::Myself,
                "Self" => Token::Metatype,
                "str" => Token::TyStr,
                "bool" => Token::TyBool,
                "unit" => Token::TyUnit,

                // s => Token::Ident(rodeo.get_or_intern_static(s)),
                // s => Token::Ident(e.state().get_or_intern(s)),
                s => Token::Ident(s),
            }),
            // Operators
            comparison_op,
            just("&").to(Token::Ampersand),
            just("@").to(Token::At),
            just("=>").to(Token::FatArrow),
            just("->").to(Token::Arrow),
            just("=").to(Token::Eq),
            just("{").to(Token::LBrace),
            just("}").to(Token::RBrace),
            just("[").to(Token::LBracket),
            just("]").to(Token::RBracket),
            arith_op,
            //             just("(").to(Token::LParen),
            // just(")").to(Token::RParen),
            just(".").to(Token::Dot),
            just(",").to(Token::Comma),
            
            just("|").to(Token::Pipe),
            just("?").to(Token::Question),

            just("::").to(Token::DoubleColon),
            just(":").to(Token::Colon),
            // just(":")
            
            // Numbers
            text::int(10)
                .then(just('.').then(text::digits(10)).or_not())
                .to_slice()
                .map(|s: &str| Token::Num(s.parse().unwrap()))
                .labelled("number"),
            just('"')
                .ignore_then(none_of('"').repeated().to_slice())
                .then_ignore(just('"'))
                .labelled("string literal")
                .map(Token::Strlit),
            token
                .padded()
                .repeated()
                .collect::<Vec<_>>()
                .delimited_by(just('('), just(')'))
                .labelled("nested expression")
                .as_context()
                .map_with(|x, _| Token::Parens(x.leak())),
        ))
        .map_with(move |t, e: &mut MapExtra<'_, '_, I, extra::Err<_>>| {
            Spanned(t, SimpleSpan::new(id, e.span().into_range()))
        })
    })
    .padded_by(comment.repeated())
    .padded()
    .recover_with(via_parser(recover_strat1))
    .repeated()
    .collect::<Vec<_>>()
    .boxed()
}

/// The main parser function.
fn parser<I, M>(
    make_input: &'static M,
    // id: FileID,
    // rodeo: &mut Rodeo,
) -> impl Parser<
    'static,
    I,
    Package<Untyped>,
    extra::Err<Rich<'static, Token, SimpleSpan<usize, FileID>>>,
    // extra::Full<Rich<'static, Token<'static>, SimpleSpan<usize, FileID>>, RodeoState, ()>,
>
//) -> impl Parser<'tokens, I, Package, extra::Err<Rich<'tokens, Token<'static>, SimpleSpan<usize, FileID>>>>
where
    I: BorrowInput<'static, Token = Token, Span = SimpleSpan<usize, FileID>> + ValueInput<'static>,
    // Because this function is generic over the input type, we need the caller to tell us how to create a new input,
    // `I`, from a nested token tree. This function serves that purpose.
    M: Fn(SimpleSpan<usize, FileID>, &'static [Spanned<Token>]) -> I + 'static,
{
    // Basic tokens
    // let ident =
    //     select_ref! { Token::Ident(x) => *x }.map_with(|x, e: &mut MapExtra<'_, '_, _, _>| {
    //         // |x, e| {
    //         Spanned(
    //             Intern::from(Expr::Ident(Untyped(Intern::from_ref(x)))),
    //             e.span(),
    //         )
    //     });
    let rname = select_ref! { Token::Ident(x) => *x };
    let ident = rname.map_with(|x, e: &mut MapExtra<'_, '_, _, _>| {
        Spanned(
            Intern::from(Expr::Ident(Untyped(Spanned(Intern::from_ref(x), e.span())))),
            e.span(),
        )
    });

    let raw_ident =
        rname.map_with(|x, e: &mut MapExtra<'_, '_, _, _>| Spanned(Intern::from_ref(x), e.span()));

    let ty = ty_parser(make_input).boxed();

    let pattern = pattern_parser(ident.boxed(), ty.clone()).boxed();

    // Expression parser
    let expression = recursive(|expr| {
        // let rname = select_ref! { Token::Ident(x) => *x };
        // let ident = rname.map_with(|x, e: &mut MapExtra<'_, '_, _, _>| {
        //     Spanned(
        //         Intern::from(Expr::Ident(Untyped(Intern::from_ref(x)))),
        //         e.span(),
        //     )
        // });
        // Path Access
        // This is super hacky, but it does give us a nice infix operator
        let path = ident.pratt(vec![infix(
            right(9),
            just(Token::Dot),
            |x,
             _,
             y,
             e: &mut MapExtra<
                '_,
                '_,
                I,
                extra::Err<Rich<'static, Token, SimpleSpan<usize, FileID>>>,
            >| { Spanned(Intern::from(Expr::<Untyped>::FieldAccess(x, y)), e.span()) },
        )
        .boxed()]);

    let tuple = expr.clone()
                    .separated_by(just(Token::Comma))
                    .allow_trailing().at_least(1)
                    .collect::<Vec<_>>()
                    .delimited_by(just(Token::LBrace), just(Token::RBrace))
                    .map_with(|args,
                                e| {
                                                   unsafe {
                                args
                                .into_iter()
                                .enumerate()
                                .map(|(i, arg ):
                                    (_, Spanned<Intern<Expr<Untyped>>>)| {
                                    Spanned(
                                        Expr::Label(
                                            Label(Spanned(
                                                i.to_string().into(), arg.1)),
                                            arg
                                        ).into(),
                                        arg.1)
                                })
                                .reduce(|l, r| Spanned(Expr::Concat(l, r).into(), l.1.union(r.1))).unwrap_unchecked()}
                    })
                    .labelled("tuple")
                    .as_context();

    let table = raw_ident.then_ignore(just(Token::Eq)).then(expr.clone()).separated_by(just(Token::Comma))
.allow_trailing().at_least(1)
                    .collect::<Vec<_>>()
                    .delimited_by(just(Token::LBrace), just(Token::RBrace))
.map_with(|args, e| {
                        if args.is_empty() {
                            unreachable!()
                                                    } else {
                            unsafe {args
                                .into_iter()
                                .map(|(field_name, arg)| -> Spanned<Intern<Expr<Untyped>>> {
                                    Spanned(
                                        Expr::Label(Label(Spanned(field_name.0, arg.1)), arg).into(),
                                        field_name.1.union(arg.1),
                                    )
                                })
                                .reduce(|l, r| Spanned(Expr::Concat(l, r).into(), l.1.union(r.1))).unwrap_unchecked()}
                                                    }
                    })
.labelled("table")
                    .as_context();
                      let atom = recursive(|atom| {

                    
            choice((
                // Numbers
                select_ref! { Token::Num(x) => Expr::Number(OrderedFloat(*x)) }
                    .map_with(|x, e| Spanned(Intern::from(x), e.span())),
                // Strings
                select_ref! { Token::Strlit(x) => *x }.map_with(
                    |x, e: &mut MapExtra<'_, '_, _, _>| {
                        Spanned(
                            Intern::from(Expr::String(Spanned(Intern::from_ref(x), e.span()))),
                            e.span(),
                        )
                    },
                ),
                // True
                just(Token::True)
                    .map_with(|_, e| Spanned(Intern::from(Expr::Bool(true)), e.span())),
                // False
                just(Token::False)
                    .map_with(|_, e| Spanned(Intern::from(Expr::Bool(false)), e.span())),
                // Identifiers
//                 raw_ident.rewind().then(choice((
//                     //enums
//                     raw_ident.then(
//                         expr.clone()
//                             .separated_by(just(Token::Comma))
//                             .at_least(1)
//                             .collect::<Vec<_>>()
//                             .delimited_by(
//                                 just(Token::LBrace),
//                                  just(Token::RBrace))
//                             .or_not()
//                             .labelled("enum variant field")
//                             .as_context(),
//                     )
//                     // .validate(|o, _, _| dbg!(o))
//                     .map_with(|(name, args):
//                                (_, Option<Vec<_>>), e| {
//                         if let Some(args) = args {
//                             let args = unsafe {
//                                 args
//                                 .into_iter()
//                                 .enumerate()
//                                 .map(|(i, arg ):
//                                     (_, Spanned<Intern<Expr<Untyped>>>)| {
//                                     Spanned(
//                                         Expr::Label(
//                                             Label(Spanned(
//                                                 i.to_string().into(), arg.1)),
//                                             arg
//                                         ).into(),
//                                         arg.1)
//                                 })
//                                 .reduce(|l, r| Spanned(Expr::Inject(Direction::Left, l).into(), l.1.union(r.1))).unwrap_unchecked()}
//                                 ;
//                             let ex = Expr::Label(Label(name), args);

//                             Spanned(Intern::from(ex), e.span())
//                         } else {
                            
// Spanned(Expr::Ident(Untyped(name)).into(), e.span())
//                         }
//                                            })
//                     .labelled("enum constructor")
//                     .as_context(),

//                     // structs
//                     raw_ident
//                      .then(
//                         raw_ident
//                             .then_ignore(just(Token::Eq))
//                             .then(expr.clone())
//                             .separated_by(just(Token::Comma))
//                             .at_least(1)
//                             .collect::<Vec<(Spanned<Intern<String>>, Spanned<Intern<Expr<Untyped>>>)>>()
//                             .delimited_by(just(Token::LBrace), just(Token::RBrace)),
//                     )
//                     .map_with(|(name, args), e| {
//                         if args.is_empty() {
//                             unreachable!()
//                                                     } else {
//                             let args = unsafe {args
//                                 .into_iter()
//                                 .map(|(field_name, arg)| -> Spanned<Intern<Expr<Untyped>>> {
//                                     Spanned(
//                                         Expr::Label(Label(Spanned(field_name.0, arg.1)), arg).into(),
//                                         field_name.1.union(arg.1),
//                                     )
//                                 })
//                                 .reduce(|l, r| Spanned(Expr::Concat(l, r).into(), l.1.union(r.1))).unwrap_unchecked()};
//                             let ex = Expr::Label(Label(name), args);
//                            Spanned(Intern::from(ex), e.span())
//                         }
//                     })
//                     .labelled("struct constructor")
//                     .as_context(),

//                 // plain old idents
//                 raw_ident.then(empty()).map_with(
//                     |(name, _), e|
//                     Spanned(Expr::Ident(Untyped(name)).into(), e.span())),
//                 ))).map(|x| x.1),

                          
                                              
                // Tuple Constructors
                tuple,

                table,

                // idents
                ident,

                just(Token::At).ignore_then(raw_ident).map_with(|id, e| Spanned(Intern::from(Expr::Particle(id)), e.span())),

                // let x = y in z
                just(Token::Let)
                    //.ignore_then(ident)
                    .ignore_then(raw_ident)
                    .then_ignore(just(Token::Eq))
                    .then(expr.clone())
                    .then_ignore(just(Token::In))
                    .then(expr.clone())
                    .map_with(|((lhs, rhs), then), e| {
                        Spanned(Intern::from(Expr::Let(Untyped(lhs), rhs, then)), e.span())
                    }),
                // If expression
                just(Token::If)
                    .ignore_then(expr.clone())
                    .then_ignore(just(Token::Then))
                    .then(expr.clone())
                    .then_ignore(just(Token::Else))
                    .then(expr.clone())
                    .map_with(|((test, then), otherwise), e| {
                        Spanned(Intern::from(Expr::If(test, then, otherwise)), e.span())
                    })
                    .labelled("if expression")
                    .as_context(),
                // Match Expression
                just(Token::Match)
                    .ignore_then(expr.clone())
                    .then(
                        just(Token::Pipe)
                            .ignore_then(pattern)
                            .then_ignore(just(Token::Then))
                            .then(expr.clone())
                            .map(|(p, e)| (p, e))
                            .separated_by(just(Token::Comma))
                            .allow_trailing()
                            //                            .allow_trailing()
                            //.repeated()
                            .collect::<Vec<_>>(),
                    )
                    .map_with(|(matchee, arms), e| {
                        Spanned(
                            Intern::from(Expr::Match(matchee, Intern::from(arms))),
                            e.span(),
                        )
                    }),
            ))
        })
        .boxed();
        //.memoized();

        choice((
            atom,
            // fn x y => z
            just(Token::Fn).ignore_then(raw_ident.repeated().foldr_with(
                just(Token::FatArrow).ignore_then(expr.clone()),
                |arg, body, e| {
                    Spanned(
                        Intern::from(Expr::Lambda(Untyped(arg), body, LambdaInfo::Anon)),
                        e.span(),
                    )
                },
            )),
            // ( x )
            expr.nested_in(select_ref! { Token::Parens(ts) = e => make_input(e.span(), ts) }),
        ))
        .pratt(vec![
            // Multiply
            infix(left(8), just(Token::Asterisk), |x, _, y, e| {
                Spanned(Intern::from(Expr::Mul(x, y)), e.span())
            })
            .boxed(),
            // Divide
            infix(left(8), just(Token::Slash), |x, _, y, e| {
                Spanned(Intern::from(Expr::Div(x, y)), e.span())
            })
            .boxed(),
            // Add
            infix(left(7), just(Token::Plus), |x, _, y, e| {
                Spanned(Intern::from(Expr::Add(x, y)), e.span())
            })
            .boxed(),
            // Subtract
            infix(left(7), just(Token::Minus), |x, _, y, e| {
                Spanned(Intern::from(Expr::Sub(x, y)), e.span())
            })
            .boxed(),
            infix(
                left(5),
                select_ref! { Token::ComparisonOp(c) => *c },
                |left, op, right, e| {
                    Spanned(Intern::from(Expr::Comparison(left, op, right)), e.span())
                },
            )
            .boxed(),
            // Calls
            infix(left(9), empty(), |func, (), arg, e| {
                Spanned(Intern::from(Expr::Call(func, arg)), e.span())
            })
            .boxed(),
            infix(left(8), just(Token::DoubleColon), |obj, _, f, e| {
                Spanned(Intern::from(Expr::MethodAccess(obj, f)), e.span())
            })
            .boxed(),
            // Field Access
            infix(left(10), just(Token::Dot), |x, _, y, e| {
                Spanned(Intern::from(Expr::FieldAccess(x, y)), e.span())
            })
            .boxed(),
        ])
        // .map(|x| (x))
        .boxed()
        .memoized()
        .labelled("expression")
        .as_context()
    });

    let definition = recursive(|_| {
        // Toplevel Let binding
        let let_binding = just(Token::Let)
            .ignore_then(raw_ident)
            .then(
                raw_ident
                .repeated()
                .collect::<Vec<_>>()
                
            )
            .then_ignore(just(Token::Colon)  )
            .then(ty.clone())
            
            // .the  c_ignore(just(Token::Colon)).then(ty.clone())
            .then_ignore(just(Token::Eq))
            // .validate(|o, e, m| { dbg!(o)})
            .then(expression.clone())
            .try_map_with(|(((name, args), ty), body), e| {
                // let arg_types = ty.0.destructure_arrow().0;
                // if arg_types.len() == args.len() {
                    
// dbg!(&args, &arg_types);
                let value = args.iter().rev()
                    // .zip(arg_types)
                    .fold(body, |acc, arg| {
                    Spanned(
                        Expr::Lambda(Untyped(*arg), acc, LambdaInfo::Curried).into(),
                        e.span(),
                    )
                });
                Ok(Definition::Let(Untyped(name),  value, ty))
                
                // } else {
  
                    // Err(Rich::custom(name.1, format!("{} expected {} arguments, but its signature implies {}", name.0, args.len(), arg_types.len())))
                // }
                            })
            .labelled("let-definition")
            .as_context();

        // let def_binding = just(Token::Def)
        //     .ignore_then(ident)
       //     .then_ignore(just(Token::Myself))
        //     .then(ident.repeated().collect::<Vec<_>>())
        //     .then(just(Token::Colon).ignore_then(ty))
        //     .then(just(Token::Eq).ignore_then(expression.clone()))
        //     // .then(expression.clone())
        //     .map_with(|(((name, args), ty), body), e| {
        //         let value: (Expr, SimpleSpan<usize, u64>) =
        //             args.into_iter().rev().fold(body, |acc, arg| {
        //                 (
        //                     Expr::Lambda(Box::leak(Box::new(arg)), Box::leak(Box::new(acc))),
        //                     e.span(),
        //                 )
        //             });
        //         (name, value, ty)
        //     })
        //     .labelled("def-definition")
        //     .as_context();

        // Struct definition
        let struct_field = raw_ident.then_ignore(just(Token::Colon)).then(ty.clone());
        let struct_def = just(Token::Struct)
            .ignore_then(raw_ident)
            //.then(ident.separated_by(just(Token::Comma)).delimited_by(just(Token::LBracket), just(Token::RBracket)).collect::<Vec<_>>())
            .then_ignore(just(Token::Eq))
            .then(
                struct_field
                    .separated_by(just(Token::Comma))
                    .allow_trailing()
                    .collect::<Vec<(Spanned<Intern<String>>, Spanned<Intern<Type>>)>>(),
            )
            .map_with(|(name, fields), _| {
                let (fields, values): (Vec<Spanned<_>>, Vec<_>) = fields.into_iter().unzip();
                let fields = fields.iter().map(|x| Label(*x)).collect::<Vec<_>>().leak();
                let values = values.iter().map(|x| Intern::from(*x.0)).collect::<Vec<_>>().leak();
                let ty_body = Type::Prod(Row::Closed(ClosedRow { fields, values }));
                // let ty = Type::Label(Label(name), ty_body.into());
                let ty = ty_body;
                Definition::Type(name, ty)
            });
        let enum_variant = choice((
            raw_ident
                .then(
                    ty.clone()
                        .separated_by(just(Token::Comma))
                        .allow_trailing()
                        .collect::<Vec<_>>()
                        .delimited_by(just(Token::LBrace), just(Token::RBrace)),
                )
                .map_with(|(name, types), e| {
                    let fields = Type::Prod(Row::Closed(ClosedRow {
                        fields: types
                            .iter()
                            .enumerate()
                            .map(|(i, x)| Label(Spanned(i.to_string().into(), x.1)))
                            .collect::<Vec<_>>()
                            .leak(),
                        values: types.iter().map(|x| Intern::from(*x.0)).collect::<Vec<_>>().leak()
                    }));
                    let n = Label(name);
                    let variant_ty = Type::Label(Label(name), fields.into());
                    (n, Intern::from(variant_ty))
                }),
            raw_ident.map_with(|name, e| {
                let n = Label(name);
                let ty = Type::Label(n, Type::Unit.into());
                (n, Intern::from(ty))
            }),
        )).boxed();

        // Enum defintions
        let enum_def = just(Token::Enum)
            .ignore_then(raw_ident)
            .then_ignore(just(Token::Eq))
            .then(
                enum_variant
                    .clone()
                    .separated_by(just(Token::Comma))
                    .allow_trailing()
                    .collect::<Vec<(Label, Intern<Type>)>>(),
            )
            .map_with(|(name, variants), _| {
                let (fields, values): (Vec<Label>, Vec<Intern<Type>>) = variants.into_iter().unzip();

                let (fields, values) = (fields.leak(), values.leak());

                let ty_body = Type::Sum(Row::Closed(ClosedRow { fields, values }));
                // let ty = Definition::Type(Type::Label(
                //     Label(name),
                //     ty_body.into(),
                // ));
                let ty = ty_body;
                Definition::Type(name, ty)
            });

        // Import
        let import_path = expression; //ident
                                      // .clone()
                                      // .separated_by(just(Token::Dot))
                                      // .at_least(1)
                                      // .collect::<Vec<_>>();

        let import = just(Token::Use)
            .ignore_then(import_path)
            .map(Definition::Import);

        let extern_def = just(Token::Extern)
            .ignore_then(raw_ident)
            .then_ignore(just(Token::Colon))
            .then(ty)
            .map(|(name, ty)| Definition::Extern(name, ty));

        // let impl_group = just(Token::Impl)
        //     .ignore_then(ty)
        //     .then_ignore(just(Token::Eq))
        //     .then(def_binding.repeated().collect::<Vec<_>>())
        //     .map_with(|(the_ty, methods), _| Definition::ImplDef(ImplDef { the_ty, methods }));

        choice((
            import,
            let_binding,
            struct_def,
            extern_def,
            enum_def,
            // impl_group,
        ))
    });

    let package = just(Token::Package)
        .ignore_then(raw_ident)
        .then_ignore(just(Token::Eq))
        .then(
            just(Token::Pub)
                .ignore_then(definition.clone().repeated().collect::<Vec<_>>())
                .or(definition.clone().repeated().collect::<Vec<_>>()),
        )
        .map_with(|(name, items), _| Package {
            name: name.to_owned(),
            items,
        })
        .labelled("package")
        .as_context();
    //
    // Program
    package
        // .repeated()
        // .at_least(1)
        // .collect::<Vec<_>>()
        // .map(|packages| Program { packages })
        .then_ignore(end())
}


fn ty_parser<'src, I, M>(
    make_input: &'src M,
    ) -> impl Parser<'src, I, Spanned<Intern<Type>>, extra::Err<Rich<'src, Token, SimpleSpan<usize, FileID>>>>
where
    I: BorrowInput<'src, Token = Token, Span = SimpleSpan<usize, FileID>> + ValueInput<'src>,
    M: Fn(SimpleSpan<usize, FileID>, &'src [Spanned<Token>]) -> I + 'src,
{
    let rname = select_ref! { Token::Ident(x) => *x };

    let raw_ident =
        rname.map_with(|x, e: &mut MapExtra<'_, '_, _, _>| Spanned(Intern::from_ref(x), e.span()));

     recursive(
        |ty: Recursive<dyn Parser<'_, I, Spanned<Intern<Type>>, _>>| {
            let type_list = ty
                .clone()
                .separated_by(just(Token::Comma))
                .allow_trailing()
                .collect::<Vec<_>>();
